lessons/03/foodtrucks-k8s/backend-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: foodtrucks-backend
spec:
  selector:
    app: foodtrucks-backend
  type:  ClusterIP
  ports:
  - name:  http
    port:  80
    targetPort:  5000
