lessons/03/foodtrucks-k8s/frontend-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: foodtrucks-frontend
spec:
  selector:
    app: foodtrucks-frontend
  type:  ClusterIP
  ports:
  - name:  http
    port:  80
    targetPort:  80
