lessons/03/foodtrucks-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foodtrucks-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /search
        pathType: Prefix
        backend:
          service: 
            name: foodtrucks-backend
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: foodtrucks-frontend
            port:
              number: 80
